# ZXKTV

./: build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/androidTest/java/com/zx/zxktv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zx/zxktv/: App.java
app/src/main/java/com/zx/zxktv/adapter/: OrderSangListAdapter.java  OrderSongListAdapter.java  RecyclerViewCursorAdapter.java  SongListAdapter.java
app/src/main/java/com/zx/zxktv/adapter/animator/: AnimationAdapter.java  SlideInLeftAnimationAdapter.java
app/src/main/java/com/zx/zxktv/data/: LoadVideoModelPresenterImpl.java  MediaLoader.java  MimeType.java  Song.java  VideoModelImpl.java
app/src/main/java/com/zx/zxktv/data/interfaces/: VideoModelContract.java
app/src/main/java/com/zx/zxktv/data/utils/: AutoRefreshVideoList.java
app/src/main/java/com/zx/zxktv/presentation/: GLPlayRenderThread.java  GiftPresentation.java  MoviePlayer.java  MsgEvent.java  MutilVideoPresentation.java  MutilVideoPresentation2.java  PresentationService.java  VideoBean.java  VideoPresentation.java
app/src/main/java/com/zx/zxktv/ui/: BaseActivity.java  MainActivity.java
app/src/main/java/com/zx/zxktv/ui/fragment/: SongPreviewWin.java
app/src/main/java/com/zx/zxktv/ui/view/: AlwaysMarqueeTextView.java  LongTouchButton.java  MagicTextView.java  (+4 more)
app/src/main/java/com/zx/zxktv/utils/: AudioMngHelper.java  FileSystemUtil.java  LogUtils.java  SharePrefUtil.java  UriUtils.java  ViewUtils.java
app/src/main/res/anim/: slide_right_out_percent.xml
app/src/main/res/drawable/: bg_edittext.xml  border_shape_with_border.xml  btn_accompany.xml  btn_border_normal.xml  btn_border_select.xml  btn_song_list_information_bg.xml  btn_track.xml  cb_bottom_accompany.xml  cb_bottom_play_ctrl.xml  edt_search_bg.xml  sel_btn_focus.xml
app/src/main/res/layout/: activity_main.xml  float_view.xml  item_song_layout.xml  list_item.xml  main.xml  main_bottom_control.xml  main_center_fragment.xml  main_top_control.xml  pop_ordered_list_item.xml  pop_sang_list_item.xml  popup_control_effect.xml  popup_control_track.xml  popup_control_volume.xml  popup_ordered_songs_frgment.xml  popup_ordersongs.xml  popup_sang_song_fragment.xml  presentation_mutil_video_decode.xml  presentation_mutil_video_decode2.xml  progressbar_presentation.xml  rb_audio_tack.xml  song_preview_win_layout.xml  tab_indicator.xml  video_presentation.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/com/zx/zxktv/: ExampleUnitTest.java
exoplayer/: build.gradle
exoplayer/src/main/java/com/kk/taurus/exoplayer/: ExoMediaPlayer.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayerLib/ijkplayer-armv7a/: build.gradle
ijkplayerLib/ijkplayer-armv7a/src/main/jni/ijkmedia/ijkplayer/: ff_ffplay.c  ff_ffplay.h  ijkplayer.c
ijkplayerLib/ijkplayer-armv7a/src/main/jni/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
ijkplayerLib/ijkplayer-java/: build.gradle
libijkplayer/: build.gradle
libijkplayer/src/main/: AndroidManifest.xml
libijkplayer/src/main/res/values/: strings.xml
libzxplayer/: CMakeLists.txt  build.gradle
libzxplayer/src/androidTest/java/com/zxktv/ZXPlayer/: ExampleInstrumentedTest.java
libzxplayer/src/main/: AndroidManifest.xml
libzxplayer/src/main/cpp/: JavaJNICallback.cpp  JavaJNICallback.h  PlayStatus.cpp  PlayStatus.h  Stataus.h  ZXVideoPlayer.cpp  base_player.h  com_zxktv_ZXPlayer_ZXVideoPlayer.h  video_player_control.cpp  video_player_control.h
libzxplayer/src/main/cpp/audio/: audio_channel.cpp  audio_channel.h  audio_decoder.cpp  audio_decoder.h  audio_output.cpp  audio_output.h
libzxplayer/src/main/cpp/audio_effect/: CMakeLists.txt
libzxplayer/src/main/cpp/audio_effect/libaudio_effect/audio_effect/: audio_effect.h  audio_effect_builder.cpp
libzxplayer/src/main/cpp/audio_effect/libaudio_effect/audio_effect_filter_impl/pitch_shift/: accompany_pitch_shift_effect_filter.cpp  pitch_shift_effect_filter.cpp  pitch_shift_effect_filter.h
libzxplayer/src/main/cpp/audio_effect/libaudio_effect/audio_effect_impl/auto_tune/: auto_tune_audio_effect_builder.cpp
libzxplayer/src/main/cpp/audio_effect/libaudio_effect/audio_effect_impl/harmonic/: harmonic_audio_effect_builder.cpp
libzxplayer/src/main/cpp/audio_effect/libaudio_effect/audio_effect_processor/: audio_effect_processor_factory.cpp
libzxplayer/src/main/cpp/audio_effect/libaudio_effect/audio_effect_processor/live/: accompany_effect_processor.cpp  accompany_effect_processor.h
libzxplayer/src/main/cpp/common/: AndroidLog.h
libzxplayer/src/main/cpp/libcommon/: AndroidLog.h  CMakeLists.txt  CommonTools.h  PlayerQueue.cpp  PlayerQueue.h  WlQueue.cpp  WlQueue.h
libzxplayer/src/main/cpp/video/: video_decoder.cpp  video_decoder.h
libzxplayer/src/main/java/com/zxktv/ZXPlayer/: MuteEnum.java  TimeBean.java  ZXVideoPlayer.java
libzxplayer/src/main/java/com/zxktv/audioeffect/: AdjustEchoReverbParam.java  AudioEffect.java  AudioEffectEQEnum.java  AudioEffectFilterType.java  AudioEffectParamController.java  AudioEffectStyleEnum.java  AudioEffectType.java  AudioInfo.java  AutoTuneProcessor.java  LenovoAudioEffect.java  OutputGainParam.java  SOXCompressorParam.java  SOXEqualizerParam.java  SOXReverbParam.java  SongStyleEffectParam.java
libzxplayer/src/main/java/com/zxktv/listener/: OnCompleteListener.java  OnCutVideoImgListener.java  OnErrorListener.java  OnGlSurfaceViewOncreateListener.java  OnInfoListener.java  OnLoadListener.java  OnPreparedListener.java  OnRenderRefreshListener.java  OnStopListener.java  Status.java
libzxplayer/src/main/java/com/zxktv/opengles/: DirectDrawer.java  EglUtils.java  GlViewRender.java  ShaderUtils.java  TextureUtil.java  ZXGlSurfaceView.java
libzxplayer/src/main/java/com/zxktv/util/: Base64.java  DesEncode.java  LogUtils.java  MyLog.java  TimeUtil.java  WlTimeUtil.java
libzxplayer/src/test/java/com/zxktv/ZXPlayer/: ExampleUnitTest.java
playerbase/: build.gradle
playerbase/src/main/java/com/kk/taurus/playerbase/: AVPlayer.java
(+32 files in other folders)
